--- a/CQFDsnap/CQFDsnap/CQFDsnap.vcxproj.filters
+++ b/CQFDsnap/CQFDsnap/CQFDsnap.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Ocvtest.cpp">
+    <ClCompile Include="test.cpp">
       <Filter>Fichiers sources</Filter>
     </ClCompile>
   </ItemGroup>
