--- a/CQFDsnap/CQFDsnap/CQFDsnap.vcxproj
+++ b/CQFDsnap/CQFDsnap/CQFDsnap.vcxproj
@@ -83,7 +83,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="Ocvtest.cpp" />
+    <ClCompile Include="test.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
